<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.tipi.self_check_in.ui.fragments.LandingFragment">


  <TextView
      android:id="@+id/title"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="@dimen/first_key_line"
      android:gravity="center"
      android:text="@string/checked_in_text"
      android:textColor="@color/main_text"
      android:textSize="@dimen/font_extra_large"/>

  <Button
      android:id="@+id/yes_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/no_btn"
      android:layout_marginBottom="@dimen/second_key_line"
      android:layout_marginLeft="@dimen/proceed_button_margin"
      android:layout_marginRight="@dimen/proceed_button_margin"
      android:background="@drawable/next_button_bg"
      android:onClick="goToFindActivity"
      android:padding="@dimen/first_key_line"
      android:text="@string/yes"
      android:textColor="@color/colorAccent"
      android:textSize="@dimen/font_normal"
      android:textStyle="bold"/>

  <Button
      android:id="@+id/no_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="@dimen/second_key_line"
      android:layout_marginLeft="@dimen/proceed_button_margin"
      android:layout_marginRight="@dimen/proceed_button_margin"
      android:background="@drawable/next_button_bg"
      android:onClick="goToIdentity"
      android:padding="@dimen/first_key_line"
      android:text="@string/no"
      android:textColor="@color/colorAccent"
      android:textSize="@dimen/font_normal"
      android:textStyle="bold"/>

</RelativeLayout>
