...
          android:textSize="@dimen/font_large"/>
    </android.support.design.widget.TextInputLayout>

  </LinearLayout>

  <Button
      android:id="@+id/submit_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:background="@drawable/next_button_bg"
      android:padding="@dimen/first_key_line"
      android:layout_marginLeft="@dimen/proceed_button_margin"
...
